Fixed overflow scroll bars in panel

--- a/src/Components/JsonPreview/JsonPreview.scss
+++ b/src/Components/JsonPreview/JsonPreview.scss
@@ -3,6 +3,7 @@
 
     .cb-json-preview-container {
         flex: 1 1 auto;
+        margin-top: 16px;
         overflow: auto;
     }
     .cb-json-preview-modal-footer-container {
